# bp-health-coach

./: .env.example  .gitignore  AGENT.md  PHASE3_PRD_COMPLETE.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
docs/: apple-health-import-guide.md  current-features.md  test-results.md
scripts/: import_health_data.py  parse_apple_health.py  setup_database.py
src/: __init__.py
src/api/: main.py
src/data/: database.py  vector_store.py
src/features/: alerts.py  daily_briefing.py  goal_tracking.py  query_answering.py  scenario_testing.py  weekly_report.py
src/llm/: claude.py  gpt4.py  llama.py  router.py
src/models/: ml_models.py  predictions.py
src/orchestration/: context_retrieval.py  conversation_manager.py  intent_classifier.py
src/scheduler/: __init__.py  jobs.py
src/ui/: cli.py  streamlit_app.py
tests/: test_intent_classifier.py
